--- a/readme
+++ b/readme
@@ -1,1 +1,4 @@
-This repository is for a Industrial Data Logger 
+This repository is for a Industrial Data Logger and it includes all the hardware and firmware files
+
+
+
