--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-This repository is for a Industrial Data Logger and it includes all the hardware and firmware files
+This repository is for a Industrial Data Logger and it includes all the hardware design files and firmware files
 
 
 
