--- a/readme
+++ b/readme
@@ -16,3 +16,4 @@ This repository is for a Industrial Data Logger and it includes all the hardware
 14. 6 Pin ICSP Headers
 15. Serial Programming using UART0
 
+Datalogger Images/DataLogger Programing Arrangement.jpg
