--- a/readme
+++ b/readme
@@ -1,5 +1,19 @@
 This repository is for a Industrial Data Logger and it includes all the hardware design files and firmware files
 
+___________________________________________________________________________________________________________________________________________
+Please check the following links for video demostration of Datalogger PCB
+
+1. Video in this link describes the entire PCB of Industrial Datalogger
+
+https://drive.google.com/open?id=1-QjOal9vDFr6C30vdyRp-lrAA95-3nSr
+
+2. Video in this link gives the demostration of each and every inetrface of Industrial Datalogger
+
+https://drive.google.com/open?id=1AglGJTn_O3K_O5rFmPPeSSnq5-zFRN2F
+___________________________________________________________________________________________________________________________________________
+
+Features
+
 1. SMPS (5V)
 2. LDO Regulator (3.3v)
 3. Relay Driver										 (2 CH)
