--- a/readme
+++ b/readme
@@ -1,4 +1,5 @@
-This repository is for a Industrial Data Logger and it includes all the hardware design files and firmware files
+This repository includes all the hardware design files and firmware files for Industrial DataLogger 
+which is designed for The Ultimate Arduino Challange
 
 ___________________________________________________________________________________________________________________________________________
 Please check the following links for video demostration of Datalogger PCB
