--- a/readme
+++ b/readme
@@ -1,3 +1,5 @@
+# Project Title
+
 This repository includes all the hardware design files and firmware files for Industrial DataLogger 
 which is designed for The Ultimate Arduino Challange
 
